fix(CI): Grant tag update action workflow permissions
Moving a tag between commits with workflows counts as changing the workflow,
so workflow write permission can be required.

--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -6,7 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     permissions:
-        contents: write
+      contents: write
+      actions: write # due to possibly updating this file
     steps:
       - uses: actions/checkout@v2
       - name: Move nightly tag to head for nightly release
