chore(deps): Add msgpack to archlinux dockerfile
Missed in last update since it's not covered in CI.

--- a/buildscripts/docker/Dockerfile.archlinux
+++ b/buildscripts/docker/Dockerfile.archlinux
@@ -30,6 +30,7 @@ RUN pacman -Syu --noconfirm --needed \
     sqlcipher \
     openal \
     sonnet \
+    msgpack-c \
     snorenotify \
     git \
     && \
