fix(doxygen): Re-enable deploying of doxygen to qtox.github.io
Hasn't been run since the travis days.

Now managed through a deploy key rather than an access token to limit scope to
a single repo. Private key is stored in qTox/qTox as a repository secret, and
the public portion is saved to qTox/doxygen as a deploy key.

--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -490,6 +490,11 @@ jobs:
           fetch-depth: 0
       - name: Run
         run: ./.ci-scripts/build-docs.sh
+      - name: Deploy
+        if: github.ref == 'refs/heads/master'
+        env:
+          access_key: ${{ secrets.GITSTATS_DEPLOY_KEY }}
+        run: ./.ci-scripts/deploy-docs.sh
   build-gitstats:
     name: Gitstats
     runs-on: ubuntu-latest
