--- a/buildscripts/docker/Dockerfile.windows_builder
+++ b/buildscripts/docker/Dockerfile.windows_builder
@@ -138,7 +138,7 @@ RUN mkdir -p /src/sodium && \
 
 COPY download/download_vpx.sh /build/download/download_vpx.sh
 COPY build_vpx.sh /build/build_vpx.sh
-COPY patches/vpx.patch /build/patches/vpx.patch
+COPY patches/vpx-windows.patch /build/patches/vpx-windows.patch
 RUN mkdir -p /src/vpx && \
   cd /src/vpx && \
   /build/build_vpx.sh --arch ${SCRIPT_ARCH} && \
