--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -517,7 +517,7 @@ jobs:
       - name: Install toxcore and toxext
         run: buildscripts/build_toxcore_linux.sh
       - name: Build qTox
-        run: ./.ci-scripts/build-osx.sh
+        run: ./.ci-scripts/build-qtox-macos.sh user
       - name: Upload dmg
         uses: actions/upload-artifact@v2
         with:
