--- a/.github/workflows/build-test-deploy.yaml
+++ b/.github/workflows/build-test-deploy.yaml
@@ -505,7 +505,7 @@ jobs:
       - name: Run
         run: ./.ci-scripts/build-docs.sh
       - name: Deploy
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master' && github.owner == 'qTox'
         env:
           access_key: ${{ secrets.DOXYGEN_DEPLOY_KEY }}
         run: ./.ci-scripts/deploy-docs.sh
@@ -527,7 +527,7 @@ jobs:
       - name: Run
         run: ./.ci-scripts/build-gitstats.sh
       - name: Deploy
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master' && github.owner == 'qTox'
         env:
           access_key: ${{ secrets.GITSTATS_DEPLOY_KEY }}
         run: ./.ci-scripts/deploy-gitstats.sh
